// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'/basic': Cli.run > default > main 1`] = `
"import { bar as bar1, foo as foo1 } from './foo.js';
export function foo(options = {}) {
    foo1(options);
    console.log('Hello, foo!', options.value);
}
export function bar(options = {}) {
    bar1(options);
    console.log('Hello, bar!', options.value);
}
(function (bar) {
    function baz(options = {}) {
        console.log('Hello, baz!', options.value);
    }
    bar.baz = baz;
})(bar || (bar = {}));
//# sourceMappingURL=index.js.map"
`;

exports[`'/basic': Cli.run > default > output 1`] = `
"{
  "name": "basic",
  "version": "0.0.0",
  "type": "module",
  "exports": {
    ".": {
      "src": "./index.ts",
      "types": "./dist/index.d.ts",
      "default": "./dist/index.js"
    }
  },
  "sideEffects": false,
  "main": "./dist/index.js",
  "module": "./dist/index.js",
  "types": "./dist/index.d.ts"
}


├── dist
│   ├── foo.d.ts
│   ├── foo.d.ts.map
│   ├── foo.js
│   ├── foo.js.map
│   ├── index.d.ts
│   ├── index.d.ts.map
│   ├── index.js
│   └── index.js.map
├── foo.ts
├── index.ts
├── package.json
└── tsconfig.json
"
`;

exports[`'/basic': Cli.run > default > types 1`] = `
"export declare function foo(options?: foo.Options): void;
export declare namespace foo {
    type Options = {
        value?: string | undefined;
    };
}
export declare function bar(options?: bar.Options): void;
export declare namespace bar {
    type Options = {
        value?: string | undefined;
    };
    function baz(options?: Options): void;
}
//# sourceMappingURL=index.d.ts.map"
`;

exports[`'/basic-object-exports': Cli.run > default > main 1`] = `
"import { bar as bar1, foo as foo1 } from './foo.js';
export function foo(options = {}) {
    foo1(options);
    console.log('Hello, foo!', options.value);
}
export function bar(options = {}) {
    bar1(options);
    console.log('Hello, bar!', options.value);
}
(function (bar) {
    function baz(options = {}) {
        console.log('Hello, baz!', options.value);
    }
    bar.baz = baz;
})(bar || (bar = {}));
//# sourceMappingURL=index.js.map"
`;

exports[`'/basic-object-exports': Cli.run > default > output 1`] = `
"{
  "name": "basic",
  "version": "0.0.0",
  "type": "module",
  "exports": {
    ".": {
      "src": "./index.ts",
      "types": "./dist/index.d.ts",
      "default": "./dist/index.js"
    }
  },
  "sideEffects": false,
  "main": "./dist/index.js",
  "module": "./dist/index.js",
  "types": "./dist/index.d.ts"
}


├── dist
│   ├── foo.d.ts
│   ├── foo.d.ts.map
│   ├── foo.js
│   ├── foo.js.map
│   ├── index.d.ts
│   ├── index.d.ts.map
│   ├── index.js
│   └── index.js.map
├── foo.ts
├── index.ts
├── package.json
└── tsconfig.json
"
`;

exports[`'/basic-object-exports': Cli.run > default > types 1`] = `
"export declare function foo(options?: foo.Options): void;
export declare namespace foo {
    type Options = {
        value?: string | undefined;
    };
}
export declare function bar(options?: bar.Options): void;
export declare namespace bar {
    type Options = {
        value?: string | undefined;
    };
    function baz(options?: Options): void;
}
//# sourceMappingURL=index.d.ts.map"
`;

exports[`'/single-entrypoint': Cli.run > default > main 1`] = `
"import { bar as bar1, foo as foo1 } from './foo.js'

export function foo(options: foo.Options = {}) {
  foo1(options)
  console.log('Hello, foo!', options.value)
}

export declare namespace foo {
  type Options = {
    value?: string | undefined
  }
}

export function bar(options: bar.Options = {}) {
  bar1(options)
  console.log('Hello, bar!', options.value)
}

export namespace bar {
  export type Options = {
    value?: string | undefined
  }

  export function baz(options: Options = {}) {
    console.log('Hello, baz!', options.value)
  }
}
"
`;

exports[`'/single-entrypoint': Cli.run > default > output 1`] = `
"{
  "name": "single-entrypoint",
  "version": "0.0.0",
  "type": "module",
  "main": "./index.ts",
  "sideEffects": false,
  "module": "./dist/index.js",
  "types": "./dist/index.d.ts",
  "exports": {
    ".": {
      "src": "./index.ts",
      "types": "./dist/index.d.ts",
      "default": "./dist/index.js"
    }
  }
}


├── dist
│   ├── foo.d.ts
│   ├── foo.d.ts.map
│   ├── foo.js
│   ├── foo.js.map
│   ├── index.d.ts
│   ├── index.d.ts.map
│   ├── index.js
│   └── index.js.map
├── foo.ts
├── index.ts
├── package.json
└── tsconfig.json
"
`;

exports[`'/single-entrypoint': Cli.run > default > types 1`] = `
"export declare function foo(options?: foo.Options): void;
export declare namespace foo {
    type Options = {
        value?: string | undefined;
    };
}
export declare function bar(options?: bar.Options): void;
export declare namespace bar {
    type Options = {
        value?: string | undefined;
    };
    function baz(options?: Options): void;
}
//# sourceMappingURL=index.d.ts.map"
`;
